# tattd-studio

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  DATA_PROVENANCE.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PRD.md  README.md  modal.py  pyproject.toml
.github/workflows/: ci.yml  drift.yml
data/artists/: artists.jsonl
data/eval/: anatomy_cases.jsonl  comparison_prompts.jsonl  conversation_traces.jsonl  generation_golden.jsonl  plagiarism_pairs.jsonl  retrieval_golden.jsonl  retrieval_knowledge_golden.jsonl
data/famous_tattoos/: famous.md
data/knowledge/: aftercare.md  cultural.md  ip.md  placement.md  taxonomy.md
data/lora_training/: artifacts.toml
evals/: calibrated_thresholds.toml
evals/results/: anatomy_critic_latest.md  comparison_matrix.md  comparison_matrix_latest.md  consultation_tier2_latest.md  drift_latest.md  embedding_benchmark.md  generation_tier1_latest.md  plagiarism_critic_latest.md  quality_critic_latest.md  retrieval_tier1_latest.md  studio_traces_latest.md  style_critic_latest.md  tier3_synthesizer_latest.md
evals/tier1/: eval_harness_smoke.py  test_anatomy.py  test_generation.py  test_plagiarism.py  test_quality.py  test_retrieval.py  test_style.py
evals/tier2/: test_comparison_matrix.py  test_consultation.py  test_embedding_benchmark.py  test_traces.py
evals/tier3/: test_drift.py  test_synthesizer.py
infra/: docker-compose.yml  train_lora.yaml
infra/scripts/: snapshot.sh  validate_permission.py
src/tattd_studio/: __init__.py  main.py
tests/: test_package_smoke.py
(+66 files in other folders)
